BFD-2844: bfd-server-war tests run in-process rather than forked.